[tool.poetry]
authors = ["Adam Walsh <adam@grid.sh>"]
description = "A command line tool for CHANGELOG files that follow the Keep-a-Changelog standard."
homepage = "https://github.com/atwalsh/kac"
license = "MIT"
name = "kac"
version = "0.3.0"

[tool.poetry.dependencies]
click = "^7.1.1"
gitpython = "^3.1.7"
jinja2 = "^2.11.1"
pyperclip = "^1.8.0"
python = "^3.6"
questionary = "^1.5.1"
semver = "^2.10.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^5.4.1"

[tool.poetry.scripts]
kac = "kac.kac:cli"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
