[tool.poetry]
authors = ["Adam Walsh <adam@atw.me>"]
description = "A command line tool for CHANGELOG files that follow the Keep-a-Changelog standard."
homepage = "https://github.com/atwalsh/kac"
license = "MIT"
name = "kac"
version = "0.4.1"
readme = "README.md"
repository = "https://github.com/atwalsh/kac"

[tool.poetry.dependencies]
click = "^8.0.1"
jinja2 = "^2.11.1"
pyperclip = "^1.8.0"
python = "^3.6"
questionary = "^1.5.1"
semver = "^2.10.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.2.4"
freezegun = "^1.0.0"

[tool.poetry.scripts]
kac = "kac.kac:cli"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
